# build-it

./: .gitignore  Build.hs  GhcBuild.hs  Results.hs  Types.hs  UploadServer.hs  build-it.cabal
Upload/: Api.hs  Client.hs
