name:                build-it
version:             0.1.0.0
synopsis:            A simple build automation tool
description:         A simple build automation tool
homepage:            http://github.com/bgamari/build-it
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           2016 (c) Ben Gamari
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Types, Build
  other-extensions:    GeneralizedNewtypeDeriving, DeriveAnyClass, DeriveGeneric, DeriveFunctor, OverloadedStrings, RecordWildCards
  build-depends:       base >=4.8 && <4.9,
                       aeson >=0.10 && <0.11,
                       time >=1.5 && <1.6,
                       transformers >=0.4 && <0.5,
                       process >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       async >=2.0 && <2.1,
                       stm >=2.4 && <2.5,
                       either >=4.4 && <4.5,
                       directory >=1.2 && <1.3
  hs-source-dirs:      .
  default-language:    Haskell2010
